...
            self?.viewState = state
        }
    }

    private func showAlert() {
        let alert = UIAlertController(
            title: "Упс!",
            message: "Функционал в разработке :(",
            preferredStyle: .alert
        )
        alert.addAction(UIAlertAction(title: "Ок", style: .default))
        present(alert, animated: true)
    }

    @objc private func likeFilm(barButton: UIBarButtonItem) {
        filmDetailViewModel?.savePressedFavouriteFilm()
        if barButton.image == .like {
...
