...
    }()

    private lazy var watchButton = {
        let button = UIButton()
        button.addTarget(self, action: #selector(watchButtonDidTap), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.setTitle("Смотреть", for: .normal)
        button.backgroundColor = .appDarkGreen
        button.layer.cornerRadius = 12
        button.titleLabel?.font = .inter(ofSize: 16)
        button.setTitleColor(.white, for: .normal)
        return button
    }()
...
